Update Main.java
解决JDK兼容问题